--- a/happy-birthday-nolan/src/app/app.component.html
+++ b/happy-birthday-nolan/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- Toolbar -->
+
 <div class="toolbar" role="banner">
   <img
     width="40"
@@ -20,7 +21,7 @@
 
     <mat-card>
       <lightgallery [settings]="settings" [onBeforeSlide]="onBeforeSlide" class="center">
-        <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
+        <a data-lg-size="480-475-480, 800-791-800, 1406-1390"
           data-src="/assets/kingsinnouting.jpg"
           data-sub-html="<h4>Kings Inn</h4> <p>2012</p>">
           <img class="img-responsive"
@@ -34,19 +35,19 @@
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/noahsthirteenth.jpg"
-          data-sub-html="<h4>Truluck's</h4> <p>2012</p>">
+          data-sub-html="<h4>Truluck's for Noah's 13th Birthday</h4> <p>2012</p>">
           <img class="img-responsive"
             src="/assets/noahsthirteenth.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/santamonica.jpg"
-          data-sub-html="<h4>Santa Monica</h4> <p>2012</p>">
+          data-sub-html="<h4>Santa Monica for Christmas Break</h4> <p>2012</p>">
           <img class="img-responsive"
             src="/assets/santamonica.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/grandma.jpg"
-          data-sub-html="<h4>Oklahoma</h4> <p>2013</p>">
+          data-sub-html="<h4>Oklahoma during Road Trip</h4> <p>2013</p>">
           <img class="img-responsive"
             src="/assets/grandma.jpg" />
         </a>
@@ -70,43 +71,43 @@
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/cowboy.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2016</p>">
+          data-sub-html="<h4>At Home</h4> <p>2016</p>">
           <img class="img-responsive"
             src="/assets/cowboy.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/grad.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2016</p>">
+          data-sub-html="<h4>Graduation</h4> <p>2016</p>">
           <img class="img-responsive"
             src="/assets/grad.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/zeus.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2017</p>">
+          data-sub-html="<h4>At Home with Zeus</h4> <p>2017</p>">
           <img class="img-responsive"
             src="/assets/zeus.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/funrun.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2017</p>">
+          data-sub-html="<h4>CCE</h4> <p>2017</p>">
           <img class="img-responsive"
             src="/assets/funrun.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/mom.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2018</p>">
+          data-sub-html="<h4>Mom's Surprise 50th Birthday</h4> <p>2018</p>">
           <img class="img-responsive"
             src="/assets/mom.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/birthday.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2018</p>">
+          data-sub-html="<h4>Birthday in Austin</h4> <p>2018</p>">
           <img class="img-responsive"
             src="/assets/birthday.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/noahgrad.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2018</p>">
+          data-sub-html="<h4>Noah's Graduation!</h4> <p>2018</p>">
           <img class="img-responsive"
             src="/assets/noahgrad.jpg" />
         </a>
@@ -118,61 +119,61 @@
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/nitro.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2018</p>">
+          data-sub-html="<h4>Nitro Swimming</h4> <p>2018</p>">
           <img class="img-responsive"
             src="/assets/nitro.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/magic.jpg"
-          data-sub-html="<h4>Dallas</h4> <p>2019</p>">
+          data-sub-html="<h4>Magic Show!</h4> <p>2019</p>">
           <img class="img-responsive"
             src="/assets/magic.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/knight.jpg"
-          data-sub-html="<h4>Dallas</h4> <p>2020</p>">
+          data-sub-html="<h4>Medieval Times</h4> <p>2020</p>">
           <img class="img-responsive"
             src="/assets/knight.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/adventure.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2020</p>">
+          data-sub-html="<h4>Birthday Quest</h4> <p>2020</p>">
           <img class="img-responsive"
             src="/assets/adventure.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/noellegrad.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2020</p>">
+          data-sub-html="<h4>Noelle's College Graduation</h4> <p>2020</p>">
           <img class="img-responsive"
             src="/assets/noellegrad.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/mckinney.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2020</p>">
+          data-sub-html="<h4>Hike in Austin</h4> <p>2020</p>">
           <img class="img-responsive"
             src="/assets/mckinney.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/goofy.jpg"
-          data-sub-html="<h4>Dallas</h4> <p>2021</p>">
+          data-sub-html="<h4>White Rock Lake</h4> <p>2021</p>">
           <img class="img-responsive"
             src="/assets/goofy.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/ten.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2021</p>">
+          data-sub-html="<h4>Tenth Birthday Party</h4> <p>2021</p>">
           <img class="img-responsive"
             src="/assets/ten.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/colorado.jpg"
-          data-sub-html="<h4>Colorado</h4> <p>2021</p>">
+          data-sub-html="<h4>Garden of the Gods</h4> <p>2021</p>">
           <img class="img-responsive"
             src="/assets/colorado.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/nashville.jpg"
-          data-sub-html="<h4>Nashville</h4> <p>2021</p>">
+          data-sub-html="<h4>Grand Ole Opry</h4> <p>2021</p>">
           <img class="img-responsive"
             src="/assets/nashville.jpg" />
         </a>
@@ -184,13 +185,13 @@
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/grad2022.jpg"
-          data-sub-html="<h4>Seattle</h4> <p>2022</p>">
+          data-sub-html="<h4>Noah's Graduation</h4> <p>2022</p>">
           <img class="img-responsive"
             src="/assets/grad2022.jpg" />
         </a>
         <a data-lg-size="480-475-480, 800-791-800, 1406-1390" class="gallery-item"
           data-src="/assets/artemis.jpg"
-          data-sub-html="<h4>Austin</h4> <p>2023</p>">
+          data-sub-html="<h4>At home with Artemis</h4> <p>2023</p>">
           <img class="img-responsive"
             src="/assets/artemis.jpg" />
         </a>
@@ -216,11 +217,10 @@
     <mat-card (click)="openDialog()" class="letter">
       From Ate Noelle
     </mat-card>
-    <mat-card (click)="openDialog()" class="letter">
+    <mat-card (click)="openKuyaLetter()" class="letter">
       From Kuya Noah
     </mat-card>
   </div>
 
 </div>
-
 <router-outlet></router-outlet>
